Update canonical links and sitemap URLs to reflect the new GitHub Pages domain

--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Surge: Your hub for all upcoming sports events in Coimbra – soccer, runs, cycling, and more.">
     <meta name="author" content="Surge">
-    <link rel="canonical" href="https://si-25-design-challenge-e98419.gitlab.io/">
+    <link rel="canonical" href="https://silassequeira.github.io/Surge-Sport-Events/">
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
