--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <meta name="description"
         content="Surge: Your hub for all upcoming sports events in Coimbra – soccer, runs, cycling, and more.">
     <meta name="author" content="Surge">
-    <link rel="canonical" href="https://si-25-design-challenge-e98419.gitlab.io/">
+    <link rel="canonical" href="https://silassequeira.github.io/Surge-Sport-Events/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://si-25-design-challenge-e98419.gitlab.io/">
+    <meta property="og:url" content="https://silassequeira.github.io/Surge-Sport-Events/">
     <meta property="og:title" content="Surge — Local Sports Events in Coimbra">
     <meta property="og:description"
         content="Surge: Your hub for all upcoming sports events in Coimbra – soccer, runs, cycling, and more.">
-    <meta property="og:image" content="https://si-25-design-challenge-e98419.gitlab.io/images/social-preview.png">
+    <meta property="og:image" content="https://silassequeira.github.io/Surge-Sport-Events/images/social-preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://si-25-design-challenge-e98419.gitlab.io/">
+    <meta property="twitter:url" content="https://silassequeira.github.io/Surge-Sport-Events/">
     <meta property="twitter:title" content="Surge — Local Sports Events in Coimbra">
     <meta property="twitter:description"
         content="Surge: Your hub for all upcoming sports events in Coimbra – soccer, runs, cycling, and more.">
-    <meta property="twitter:image" content="https://si-25-design-challenge-e98419.gitlab.io/images/social-preview.png">
+    <meta property="twitter:image" content="https://silassequeira.github.io/Surge-Sport-Events/images/social-preview.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
