Update navigation links to use relative paths for consistency

--- a/events.html
+++ b/events.html
@@ -31,15 +31,15 @@
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
     <header class="flex-row align-center-between">
-        <a href="/" aria-label="Surge Home">
+        <a href="index.html" aria-label="Surge Home">
             <span class="svg-surge-logo logo" data-svg-class="site-logo"></span>
         </a>
         <input id="burger" type="checkbox">
         <label for="burger" class="svg-hamburger active"></label>
         <nav aria-label="Main Navigation">
             <ul class="flex-col align-center-evenly items-flex-start">
-                <li><a href="/index.html">Events</a></li>
-                <li><a href="/index.html#about">About</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="mobile-menu hamburger-icon hidden" id="mobileMenuToggle"></button>
@@ -287,18 +287,18 @@
         <nav aria-label="Footer Navigation" class="grid align-center-between items-flex-start w-100">
             <span class="svg-surge-logo logo hidden-mobile" data-svg-class="site-logo"></span>
             <ul class="flex-col align-center">
-                <li><a href="#upcoming-events">Upcoming Highlights</a></li>
-                <li><a href="#about">About Surge</a></li>
-                <li><a href="#events">All Events</a></li>
+                <li><a href="index.html#upcoming-events">Upcoming Highlights</a></li>
+                <li><a href="index.html#about">About Surge</a></li>
+                <li><a href="events.html">All Events</a></li>
             </ul>
             <div class="flex-col align-center">
                 <h3>Filters</h3>
                 <ul class="flex-col align-center">
-                    <li><a href="#filter1">Filter Events by Running</a></li>
-                    <li><a href="#filter2">Filter Events by Cycling</a></li>
-                    <li><a href="#filter3">Filter Events by Soccer</a></li>
-                    <li><a href="#filter4">Filter Events by Volley</a></li>
-                    <li><a href="#filter5">Filter Events by Other</a></li>
+                    <li><a href="events.html#filter1">Filter Events by Running</a></li>
+                    <li><a href="events.html#filter2">Filter Events by Cycling</a></li>
+                    <li><a href="events.html#filter3">Filter Events by Soccer</a></li>
+                    <li><a href="events.html#filter4">Filter Events by Volley</a></li>
+                    <li><a href="events.html#filter5">Filter Events by Other</a></li>
                 </ul>
             </div>
 
