--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
     <header class="flex-row align-center-between">
-        <a href="/" aria-label="Surge Home">
+        <a href="index.html" aria-label="Surge Home">
             <span class="svg-surge-logo logo" data-svg-class="site-logo"></span>
         </a>
         <input id="burger" type="checkbox">
         <label for="burger" class="svg-hamburger active"></label>
         <nav aria-label="Main Navigation">
             <ul class="flex-col align-center-evenly items-flex-start">
-                <li><a href="/events.html">Events</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -62,7 +62,7 @@
             <div class="flex-col gap-2">
                 <h1>Welcome to Coimbra Surge Sport Events</h1>
                 <p class="text-size-2 mb-2">Your gateway to all sports events happening in beautiful Coimbra</p>
-                <a href="/events.html" class="btn btn-green mw-10">Explore Events</a>
+                <a href="events.html" class="btn btn-green mw-10">Explore Events</a>
             </div>
             <div class="img-container">
                 <img src="images/coimbra-sports-events-illustration.png"
@@ -240,7 +240,7 @@
             <ul class="flex-col items-flex-start pt-2-5">
                 <li><a href="#upcoming-events">Upcoming Highlights</a></li>
                 <li><a href="#about">About Surge</a></li>
-                <li><a href="/events.html">All Events</a></li>
+                <li><a href="events.html">All Events</a></li>
             </ul>
             <div class="flex-col items-flex-start ">
                 <h3 class="text-size-1 bold">Filters</h3>
