Update styles for improved dark theme consistency and adjust button display style in event modal

--- a/events.html
+++ b/events.html
@@ -15,8 +15,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/site.webmanifest">
 
-    <link rel="stylesheet" href="css/minified/styles.css">
-    <link rel="stylesheet" href="css/minified/components.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/components.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
     <link rel="stylesheet" href="css/minified/datepicker-theme.css">
