--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="manifest" href="images/favicon/site.webmanifest">
 
 
-    <link rel="stylesheet" href="css/minified/styles.css">
-    <link rel="stylesheet" href="css/minified/components.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/components.css">
 
     <script src="js/script.js" defer></script>
 </head>
